--- a/ATV_ws/src/ATV_control/src/ackerman_test.ipynb
+++ b/ATV_ws/src/ATV_control/src/ackerman_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ackermann_msg =[ -0.1 , 0.0 , 2.0 , 0.0]\n",
-    "h = 1\n",
-    "b = 0.5\n",
-    "r_w = 0.1"
+    "ackermann_msg =[ -0.5 , 0.0 , 100.0 , 0.0]\n",
+    "h = 2.2\n",
+    "b = 1.2\n",
+    "r_w = 0.3175"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,29 +35,29 @@
     "    alpha_r = math.atan2(h*math.tan(msg[0]) , h-0.5*b*math.tan(msg[0]))\n",
     "\n",
     "    gamma = math.atan2(msg[2],R)\n",
-    "    vel_l = math.tan(gamma) * (R+(b/2))\n",
-    "    vel_r = math.tan(gamma) * (R-(b/2))\n",
+    "    vel_l = math.tan(gamma) * (R+(b/2)) / r_w\n",
+    "    vel_r = math.tan(gamma) * (R-(b/2)) / r_w\n",
     "\n",
     "    return [alpha_l , alpha_r , vel_l , vel_r, R]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('alpha_l: ', -0.10255512548107612)\n",
-      "('alpha_r: ', -0.09756870510595053)\n",
-      "('vel_l: ', 1.9498326639572756)\n",
-      "('vel_r: ', 2.050167336042726)\n",
-      "('ICR radius: ', -9.966644423259238)\n",
+      "('alpha_l: ', -0.5706933736973726)\n",
+      "('alpha_r: ', -0.4438256818300523)\n",
+      "('vel_l: ', 268.0341454679631)\n",
+      "('vel_r: ', 361.88711437455544)\n",
+      "('ICR radius: ', -4.0270729877673945)\n",
       "---------------------------------------------------------\n",
-      "('ackerman alpha: ', -5.729577951308232, 'average of steering angles: ', -5.73312543631386)\n",
-      "('ackerman vel: ', 2.0, 'average of vels: ', 2.000000000000001)\n"
+      "('ackerman alpha: ', -28.64788975654116, 'average of steering angles: ', -29.063830058659928)\n",
+      "('ackerman vel: ', 314.96062992125985, 'average of vels: ', 314.9606299212593)\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
     "print(\"ICR radius: \", R)\n",
     "print(\"---------------------------------------------------------\")\n",
     "print(\"ackerman alpha: \", ackermann_msg[0]*180/math.pi, \"average of steering angles: \", (alpha_l+alpha_r)/2*(180/math.pi))\n",
-    "print(\"ackerman vel: \", ackermann_msg[2], \"average of vels: \", (vel_l+vel_r)/2)\n",
+    "print(\"ackerman vel: \", ackermann_msg[2]/r_w, \"average of vels: \", (vel_l+vel_r)/2)\n",
     "\n"
    ]
   }
