workin incremental steeringgit add .!

--- a/ATV_ws/src/ATV_control/src/ackerman_test.ipynb
+++ b/ATV_ws/src/ATV_control/src/ackerman_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ackermann_msg =[ -0.5 , 0.0 , 100.0 , 0.0]\n",
+    "ackermann_msg =[ -0.4 , 0.0 , 100.0 , 0.0]\n",
     "h = 2.2\n",
     "b = 1.2\n",
     "r_w = 0.3175"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,21 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('alpha_l: ', -0.5706933736973726)\n",
-      "('alpha_r: ', -0.4438256818300523)\n",
-      "('vel_l: ', 268.0341454679631)\n",
-      "('vel_r: ', 361.88711437455544)\n",
-      "('ICR radius: ', -4.0270729877673945)\n",
+      "alpha_l:  -0.4458104806104452\n",
+      "alpha_r:  -0.3623448485523736\n",
+      "vel_l:  278.6433885121118\n",
+      "vel_r:  351.2778713304072\n",
+      "ICR radius:  -5.203489324086044\n",
       "---------------------------------------------------------\n",
-      "('ackerman alpha: ', -28.64788975654116, 'average of steering angles: ', -29.063830058659928)\n",
-      "('ackerman vel: ', 314.96062992125985, 'average of vels: ', 314.9606299212593)\n"
+      "ackerman alpha:  -22.91831180523293 average of steering angles:  -23.151944776017665\n",
+      "ackerman vel:  314.96062992125985 average of vels:  314.9606299212595\n"
      ]
     }
    ],
@@ -85,14 +85,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.17"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
